fix: change styles for jumping ball

--- a/style.css
+++ b/style.css
@@ -120,6 +120,10 @@ button:hover {
 }
 
 /*animation-iteration-count, jumpinh ball*/
+.jumping-div {
+  height: 450px;
+}
+
 #jumping-ball {
   width: 100px;
   height: 100px;
@@ -129,7 +133,7 @@ button:hover {
   background: linear-gradient(35deg, #ccffff, #ffcccc);
   animation-name: bounce;
   animation-duration: 1s;
-  animation-iteration-count: 2;
+  animation-iteration-count: infinite;
 }
 
 @keyframes bounce {
